trying to stop img repeating on mobile

--- a/bio.css
+++ b/bio.css
@@ -2,6 +2,7 @@
 	background-image: url(cannon-franc.jpg);
 	background-size: cover;
 	background-attachment: fixed;
+	background-repeat: no-repeat;
 }
 
 #backdrop {
